--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "tailwindcss": "^4.1.5",
     "tailwindcss-cli": "^0.1.2",
     "vite": "^6.3.1"
   }
